k8s/storage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storage-deployment
spec:
  replicas: 1                      # кількість екземплярів Pod, що буде створено цим Deployment
  selector:
    matchLabels:
      app: storage                # селектор по якому Deployment зв'язаний з Pod
  template:
    metadata:
      labels:
        app: storage               # мітка Pod по якому вона буде зв'язана з Deployment та Service
    spec:
      containers:
        - image: storage:13      # образ Docker
          imagePullPolicy: Never   # вказує k8s, що образ не потрібно завантажувати (варто використовувати лише для випадків, коли образи локальні)
          name: storage           # ім'я контейнеру
          ports:
            - containerPort: 3001  # порт по якому можна звертатись до поди
