k8s/storage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: storage-service
spec:
  type: ClusterIP      # тип доступу до сервісу, ClusterIp - значення за замовчуванням і може бути пропущене
  ports:
    - port: 8080         # порт по якому можна звератись до сервісу
      targetPort: 3001 # порт контейнера
  selector:
    app: storage      # селектор, всі Pod з даним селектором, будуть підключені до даного сервісу
