k8s/storage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: storage-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /api/storage
            pathType: "Prefix"
            backend:
              service:
                name: storage-service
                port:
                  number: 8080
